right gap bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -135,7 +135,7 @@
 footer {
   background: deeppink;
   height: 300px;
-  width: 100vw;
+  width: 100%;
 }
 
 /*
@@ -145,7 +145,7 @@ footer {
 */
 .section {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .column {
